@@ -1,3 +1,7 @@
+2011-07-28  Xavier Perseguers  <xavier@causal.ch>
+
+	* [BUGFIX] Parametrized URL does not work with WS 2.0 as it lacks the community parameter
+
 2011-07-25  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Remove calls to deprecated methods in TYPO3 4.6
